(library
  (name ReWeb)
  (public_name re-web)
  (flags (:standard -w +A-40-42-45-48 -warn-error +A-3-44))
  (libraries
    ReWeb__Config
    ReWeb__Header
    base64
    digestif.ocaml
    httpaf
    httpaf-lwt-unix
    lwt.unix
    magic-mime
    multipart-form-data
    piaf
    uri
    websocketaf
    yojson))

